# finance-research

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  Makefile  README.md
tools/desktop/quantdesk/sidecar/: pyproject.toml
tools/desktop/quantdesk/sidecar/scripts/: dummy.py  python-launcher.sh
tools/desktop/quantdesk/sidecar/src/: contracts.py  server.py
tools/desktop/quantdesk/sidecar/src/adapters/: cninfo_announcements.py  eastmoney_notices.py  frankfurter_adapter.py  hkexnews_announcements.py  hsi_index_notices.py  research_providers.py  sec_edgar.py  tushare_adapter.py  yfinance_adapter.py
tools/desktop/quantdesk/sidecar/src/adapters/akshare/: __init__.py  adapter.py  candidates.py  catalog.py  fx.py  prices.py  proxy.py  utils.py
tools/desktop/quantdesk/sidecar/src/adapters/tushare/: __init__.py  adapter.py  candidates.py  catalog.py  constants.py  prices.py  runtime.py  ts_codes.py  utils.py
tools/desktop/quantdesk/sidecar/src/methods/: flow_sentiment.py  fundamentals.py  health.py  market_data.py  news_catalysts.py  optimization.py
tools/desktop/quantdesk/sidecar/src/methods/_market_data/: merge.py  policy.py  prices.py  search.py  types.py
tools/desktop/quantdesk/sidecar/src/methods/_news_catalysts/: classify.py  policy.py  symbol.py  window.py
tools/desktop/quantdesk/sidecar/src/methods/_research_providers/: common.py
tools/desktop/quantdesk/sidecar/tests/: test_asset_search.py  test_contracts.py  test_market_fetch.py  test_merge.py  test_news_catalysts.py  test_optimization.py  test_research_providers.py  test_rpc_server.py  test_server.py
(+1088 files in other folders)
